<resources>
    <string name="app_name">LearnEnglishWordsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_field_error">Заполните все поля, чтобы сохранить слово!</string>
    <string name="flbtnAddWord_contentDescription">Кнопка для добавления нового слова в словарь</string>
    <string name="toast_all_words_learned">Вы выучили все слова, попробуйте добавить новые или сбросить прогресс!</string>
    <string name="btn_skip">Пропустить</string>
    <string name="btn_next">Следующее слово</string>
    <string name="hint_enter_word">Введите слово</string>
    <string name="hint_translation">Перевод</string>
    <string name="btn_learn_again">Учить снова</string>
    <string name="btn_delete">Удалить</string>
    <string name="btn_save_change">Сохранить изменения</string>
    <string name="btn_start_learn_words">Учить слова</string>
    <string name="btn_dictionary">Словарь</string>
    <string name="btn_statistics">Статистика</string>
    <string name="tv_repetitions">Повторений:</string>
    <string name="tv_your_statistics">Ваша статистика:</string>
    <string name="tv_total_words_to_study">Всего слов на изучении: %s</string>
    <string name="tv_words_learned">Выучено слов: %s</string>
    <string name="tv_progress">Прогресс: %s%%</string>
</resources>